--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,11 @@
         tools:layout="@layout/fragment_scores" >
         <action
             android:id="@+id/action_scoresFragment_to_tossFragment"
-            app:destination="@id/tossFragment" />
+            app:destination="@id/tossFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <!-- Toss Fragment -->
