--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-<!--    <style name="toss_tile_style">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">100dp</item>
-        <item name="android:layout_columnWeight">1</item>
-        <item name="android:layout_gravity">fill_horizontal</item>
-        <item name="android:layout_margin">2dp</item>
-        <item name="android:background">@color/purple_200</item>
-        <item name="android:gravity">center</item>
-    </style>-->
-
     <!-- style for ImageButtons in fragment_toss.xml-->
     <style name="toss_imagebutton_style">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@drawable/toss_tile_background</item>
         <item name="android:layout_margin">1dp</item>
+        <item name="android:scaleType">fitCenter</item>
     </style>
 
 </resources>
