added ScoresViewModel; passing new Toss from TossFragment to ScoresFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,11 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="newToss"
+            app:argType="com.beletskiy.dartstrainingcalculator.data.Toss"
+            android:defaultValue="@null"
+            app:nullable="true" />
     </fragment>
 
     <!-- Toss Fragment -->
@@ -25,7 +30,11 @@
         android:id="@+id/tossFragment"
         android:name="com.beletskiy.dartstrainingcalculator.fragments.toss.TossFragment"
         android:label="@string/toss"
-        tools:layout="@layout/fragment_toss" />
+        tools:layout="@layout/fragment_toss" >
+        <action
+            android:id="@+id/action_tossFragment_to_scoresFragment"
+            app:destination="@id/scoresFragment" />
+    </fragment>
 
     <!-- Settings Fragment -->
     <fragment
