--- a/app/src/main/res/layout/fragment_scores.xml
+++ b/app/src/main/res/layout/fragment_scores.xml
@@ -21,8 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:listitem="@layout/item_toss" />
+<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
