--- a/app/src/main/res/layout/item_toss.xml
+++ b/app/src/main/res/layout/item_toss.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription">
 
     <data>
 
@@ -17,7 +18,7 @@
         <ImageView
             android:id="@+id/number_image_view"
             numberImage="@{toss.Section}"
-            android:layout_width="50dp"
+            android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_margin="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +26,18 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription"
             tools:src="@drawable/ic_2" />
+
+        <ImageView
+            android:id="@+id/ring_image_view"
+            ringImage="@{toss.Ring}"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:src="@drawable/ic_badge_x2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
