--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="Game">
+    <PreferenceCategory app:title="@string/game">
         <ListPreference
             app:defaultValue="1"
             app:entries="@array/preferencesGameTitles"
@@ -11,7 +11,7 @@
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="Phone">
+    <PreferenceCategory app:title="@string/phone">
         <SwitchPreference
             app:defaultValue="false"
             app:key="@string/prevent_sleep_key"
@@ -20,11 +20,11 @@
             app:title="@string/prevent_phone_from_sleeping" />
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="About">
+    <PreferenceCategory app:title="@string/about">
         <Preference
-            app:key="Version"
+            app:key="version"
             app:summary=""
-            app:title="Version" />
+            app:title="Darts Training Calculator" />
     </PreferenceCategory>
 
 </PreferenceScreen>
