added "save test data to database" functionality;

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="historyViewModel"
+            type="com.beletskiy.dartstrainingcalculator.fragments.history.HistoryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
