passed SavedGame row's pop-up menu action to ViewModel; added @ForeignKey and @Relation to Room-related code; added new class GameAndTosses; History and GameDetails use same HistoryViewModel;

--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="historyViewModel"
+            type="com.beletskiy.dartstrainingcalculator.fragments.history.HistoryViewModel" />
     </data>
 
     <FrameLayout
@@ -16,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/hello_blank_fragment" />
-
+            android:text="@{String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.id)}" />
     </FrameLayout>
 </layout>
