--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -21,8 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_saved_game" />
+<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
