--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,16 +10,50 @@
             type="com.beletskiy.dartstrainingcalculator.fragments.history.HistoryViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="fragments.gamedetails.GameDetailsFragment">
 
         <TextView
-            android:id="@+id/text_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@{String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.id)}" />
-    </FrameLayout>
+            android:id="@+id/timestamp_text"
+            timestamp="@{historyViewModel.selectedGameAndTosses.savedGame.timestamp}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Friday, 25 Mar 2021, 18:13" />
+
+        <!-- TODO: move to BindingAdapter-->
+        <TextView
+            android:id="@+id/game_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:text="@{`Game: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.points) + `   Total throws: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedTossList.size())}"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timestamp_text"
+            tools:text="Game: 501 Total throws: 27" />
+
+        <TextView
+            android:id="@+id/tosses"
+            savedTossList="@{historyViewModel.selectedGameAndTosses.savedTossList}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_text"
+            tools:text="20 (x2), 1, 25,\n16, 19 (x3), 17" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
