--- a/app/src/main/res/layout/item_toss.xml
+++ b/app/src/main/res/layout/item_toss.xml
@@ -21,6 +21,7 @@
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_margin="8dp"
+            android:background="@{!toss.counted ? @drawable/not_counted_bg : null}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
