some numbers are changed

--- a/app/src/main/res/drawable/ic_5.xml
+++ b/app/src/main/res/drawable/ic_5.xml
@@ -1,3 +1,24 @@
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="34dp"
+    android:height="57dp"
+    android:viewportWidth="34"
+    android:viewportHeight="57">
+  <group android:name="group">
+    <path
+        android:name="path"
+        android:pathData="M 3 49.13 C 5.59 51.84 9.55 54.65 14.32 54.39 C 20.5 54.05 23.77 51.52 26.43 46.81 C 27.905 44.062 28.24 40.842 27.363 37.849 C 26.486 34.856 24.465 32.326 21.74 30.81 C 18.51 28.87 9.74 26.62 5.97 22.44 C 2 18.05 2.56 6.56 6.15 4.72 C 10.06 2.72 14.05 5.16 16.53 6 C 23 8.18 26.74 8 31 3"
+        android:strokeColor="#231F20"
+        android:strokeWidth="5"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"/>
+  </group>
+</vector>
+
+
+<!--
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
@@ -6,4 +27,4 @@
   <path
       android:pathData="M7.316,0.581h6.962c0.3,0 0.517,-0.073 0.652,-0.218c0.165,-0.174 0.288,-0.278 0.37,-0.312S15.555,0 15.816,0c0.396,0 0.647,0.031 0.754,0.094s0.16,0.187 0.16,0.37c0,0.039 -0.015,0.213 -0.044,0.522l-0.261,3.105c-0.029,0.3 -0.08,0.489 -0.152,0.566c-0.073,0.078 -0.249,0.116 -0.53,0.116H8.924L8.677,9.243c0.948,-0.639 2.008,-0.958 3.178,-0.958c1.915,0 3.482,0.716 4.701,2.148c1.219,1.432 1.829,3.259 1.829,5.485c0,2.408 -0.704,4.357 -2.111,5.848C14.865,23.255 13.117,24 11.027,24c-1.731,0 -3.066,-0.547 -4.005,-1.64c-0.938,-1.093 -1.407,-2.234 -1.407,-3.425c0,-0.677 0.179,-1.27 0.537,-1.777c0.357,-0.508 0.87,-0.762 1.538,-0.762c0.59,0 1.059,0.198 1.407,0.595s0.522,0.934 0.522,1.611c0,0.31 -0.039,0.633 -0.116,0.972c-0.126,0.571 -0.188,0.943 -0.188,1.117c0,0.329 0.128,0.648 0.385,0.958c0.256,0.31 0.646,0.464 1.168,0.464c0.454,0 0.837,-0.118 1.146,-0.355c0.31,-0.236 0.513,-0.573 0.609,-1.008c0.097,-0.436 0.145,-1.312 0.145,-2.627l-0.028,-2.597c0,-1.983 -0.15,-3.343 -0.45,-4.078c-0.3,-0.735 -0.817,-1.103 -1.553,-1.103c-1.035,0 -1.761,0.663 -2.177,1.988c-0.097,0.31 -0.195,0.508 -0.297,0.595s-0.278,0.136 -0.53,0.146l-0.652,0.028c-0.349,0 -0.522,-0.14 -0.522,-0.421c0,-0.087 0.005,-0.218 0.015,-0.392L7.316,0.581z"
       android:fillColor="#231F20"/>
-</vector>
+</vector>-->
