--- a/app/src/main/res/drawable/ic_0.xml
+++ b/app/src/main/res/drawable/ic_0.xml
@@ -1,4 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:viewportWidth="36.93"
+    android:viewportHeight="55.99"
+    android:width="36.93dp"
+    android:height="55.99dp">
+  <path
+      android:pathData="M3.29 21.75c0.1 -1.71 1 -15.83 10.37 -18 4.13 -1 9.27 -1.17 13 0.87 5 2.77 6.58 7.77 6.81 12.46 0.29 5.77 0.59 11.64 0.45 17.4A32.31 32.31 0 0 1 32 45.28a11.73 11.73 0 0 1 -3.76 5.14C22 55.17 9.93 53 6.44 46.65a25.07 25.07 0 0 1 -3.18 -9.32C2.88 33.76 3.09 25.51 3 25"
+      android:strokeColor="#231F20"
+      android:strokeWidth="6"
+      android:strokeLineCap="round"
+      android:strokeMiterLimit="10" />
+</vector>
+
+<!--<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
@@ -6,4 +19,4 @@
   <path
       android:pathData="M12.081,0c1.25,0 2.402,0.508 3.458,1.524c1.055,1.016 1.846,2.396 2.373,4.139c0.527,1.744 0.791,3.813 0.791,6.205c0,3.985 -0.661,7.004 -1.985,9.055C15.395,22.975 13.785,24 11.891,24c-1.798,0 -3.346,-0.977 -4.645,-2.931c-1.299,-1.953 -1.949,-4.942 -1.949,-8.966c0,-4.006 0.642,-7.023 1.927,-9.056C8.508,1.017 10.127,0 12.081,0zM13.004,3.751c0,-0.693 -0.081,-1.175 -0.242,-1.443s-0.427,-0.402 -0.798,-0.402c-0.724,0 -1.085,0.615 -1.085,1.846v16.967c0,0.957 0.342,1.436 1.026,1.436c0.332,0 0.598,-0.142 0.798,-0.425s0.301,-0.62 0.301,-1.011V3.751z"
       android:fillColor="#231F20"/>
-</vector>
+</vector>-->
