--- a/app/src/main/res/drawable/ic_1.xml
+++ b/app/src/main/res/drawable/ic_1.xml
@@ -1,3 +1,17 @@
+<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
+    android:viewportWidth="27.78"
+    android:viewportHeight="55.18"
+    android:width="27.78dp"
+    android:height="55.18dp">
+  <path
+      android:pathData="M3 11.58c1.91 -1.12 9.07 -5.49 10.39 -6.36 1.84 -1.22 3.07 -2 4.73 -2.15 1.87 -0.15 4.95 -0.51 6.34 4.36 1 3.45 -0.64 43.35 -0.33 44.75"
+      android:strokeColor="#231F20"
+      android:strokeWidth="6"
+      android:strokeLineCap="round"
+      android:strokeMiterLimit="10" />
+</vector>
+
+<!--
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
@@ -6,4 +20,4 @@
   <path
       android:pathData="M10.167,6.492C9.279,6.797 8.524,6.95 7.904,6.95c-0.306,0 -0.458,-0.168 -0.458,-0.503V5.856c0,-0.227 0.045,-0.397 0.133,-0.51c0.088,-0.114 0.31,-0.24 0.666,-0.377c0.473,-0.198 1.119,-0.597 1.937,-1.198c0.818,-0.602 1.617,-1.405 2.396,-2.41c0.601,-0.779 0.957,-1.201 1.065,-1.265C13.75,0.032 13.937,0 14.203,0h1.227v21.396c0,0.219 0.168,0.409 0.504,0.578c0.285,0.138 0.461,0.284 0.524,0.436c0.063,0.153 0.097,0.557 0.097,1.205c0,0.258 -0.172,0.386 -0.519,0.386H9.264c-0.285,0 -0.461,-0.045 -0.525,-0.134c-0.064,-0.089 -0.097,-0.305 -0.097,-0.651c0,-0.491 0.028,-0.798 0.082,-0.916c0.055,-0.118 0.26,-0.232 0.614,-0.341c0.553,-0.167 0.829,-0.409 0.829,-0.724V6.492z"
       android:fillColor="#231F20"/>
-</vector>
+</vector>-->
