--- a/app/src/main/res/drawable/ic_8.xml
+++ b/app/src/main/res/drawable/ic_8.xml
@@ -1,9 +1,30 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M8.612,11.823C6.759,10.28 5.832,8.36 5.832,6.065c0,-1.836 0.568,-3.306 1.705,-4.41C8.673,0.552 10.188,0 12.08,0c1.932,0 3.449,0.53 4.552,1.59c1.103,1.06 1.653,2.317 1.653,3.772c0,1.934 -0.985,3.511 -2.956,4.731c1.22,0.967 2.083,1.942 2.59,2.928c0.508,0.985 0.762,2.132 0.762,3.439c0,2.313 -0.676,4.148 -2.027,5.505C15.303,23.322 13.666,24 11.744,24c-1.854,0 -3.389,-0.627 -4.603,-1.881c-1.215,-1.253 -1.822,-2.797 -1.822,-4.631C5.319,15.088 6.417,13.199 8.612,11.823zM10.046,13.054c-0.468,0.4 -0.797,0.891 -0.987,1.471s-0.285,1.441 -0.285,2.583c0,1.639 0.241,2.842 0.724,3.607c0.483,0.766 1.276,1.148 2.378,1.148c0.85,0 1.557,-0.261 2.122,-0.783c0.566,-0.521 0.849,-1.246 0.849,-2.173c0,-0.858 -0.204,-1.583 -0.614,-2.173c-0.41,-0.591 -1.127,-1.28 -2.151,-2.071L10.046,13.054zM13.778,8.922c0.819,-0.752 1.229,-1.925 1.229,-3.518c0,-2.325 -0.858,-3.488 -2.575,-3.488c-0.771,0 -1.391,0.262 -1.858,0.784C10.104,3.224 9.87,3.808 9.87,4.453c0,0.673 0.283,1.348 0.85,2.022C11.285,7.149 12.305,7.965 13.778,8.922z"
-      android:fillColor="#231F20"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="32dp"
+    android:height="58dp"
+    android:viewportWidth="34"
+    android:viewportHeight="58">
+  <group android:name="group">
+    <path
+        android:name="path"
+        android:pathData="M 12.33 26.36 C 11.67 25.6 9.63 23.36 9.04 22.7 C 7.476 20.98 6.132 19.072 5.04 17.02 C 4.439 15.958 4.096 14.769 4.04 13.55 C 3.872 11.779 4.241 9.998 5.1 8.44 C 6.61 5.9 10.87 4 14.18 4 C 16.256 3.878 18.333 4.219 20.26 5 C 23.58 6.63 26.76 9.76 27.47 13 C 28.24 16.48 26.54 20 23.97 22.67 C 21 25.66 17.1 27.4 13.64 29.94 C 11.477 31.479 9.547 33.321 7.91 35.41 C 5.1 39.15 3.52 44.07 5.63 48.31 C 9.83 56.71 26.33 55.52 28 46.75 C 28.49 44.2 28.82 42.43 26.64 39.06 C 25.29 36.96 19.54 31.58 18.74 30.88"
+        android:strokeColor="#231f20"
+        android:strokeWidth="8"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"/>
+  </group>
 </vector>
+
+
+    <!--
+    <vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+      <path
+          android:pathData="M8.612,11.823C6.759,10.28 5.832,8.36 5.832,6.065c0,-1.836 0.568,-3.306 1.705,-4.41C8.673,0.552 10.188,0 12.08,0c1.932,0 3.449,0.53 4.552,1.59c1.103,1.06 1.653,2.317 1.653,3.772c0,1.934 -0.985,3.511 -2.956,4.731c1.22,0.967 2.083,1.942 2.59,2.928c0.508,0.985 0.762,2.132 0.762,3.439c0,2.313 -0.676,4.148 -2.027,5.505C15.303,23.322 13.666,24 11.744,24c-1.854,0 -3.389,-0.627 -4.603,-1.881c-1.215,-1.253 -1.822,-2.797 -1.822,-4.631C5.319,15.088 6.417,13.199 8.612,11.823zM10.046,13.054c-0.468,0.4 -0.797,0.891 -0.987,1.471s-0.285,1.441 -0.285,2.583c0,1.639 0.241,2.842 0.724,3.607c0.483,0.766 1.276,1.148 2.378,1.148c0.85,0 1.557,-0.261 2.122,-0.783c0.566,-0.521 0.849,-1.246 0.849,-2.173c0,-0.858 -0.204,-1.583 -0.614,-2.173c-0.41,-0.591 -1.127,-1.28 -2.151,-2.071L10.046,13.054zM13.778,8.922c0.819,-0.752 1.229,-1.925 1.229,-3.518c0,-2.325 -0.858,-3.488 -2.575,-3.488c-0.771,0 -1.391,0.262 -1.858,0.784C10.104,3.224 9.87,3.808 9.87,4.453c0,0.673 0.283,1.348 0.85,2.022C11.285,7.149 12.305,7.965 13.778,8.922z"
+          android:fillColor="#231F20"/>
+    </vector>
+    -->
