--- a/app/src/main/res/drawable/ic_3.xml
+++ b/app/src/main/res/drawable/ic_3.xml
@@ -1,21 +1,20 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
-    android:width="36dp"
-    android:height="57dp"
-    android:viewportWidth="36"
-    android:viewportHeight="57">
+    android:width="38dp"
+    android:height="59dp"
+    android:viewportWidth="40"
+    android:viewportHeight="61">
   <group android:name="group">
     <path
         android:name="path"
-        android:pathData="M 5 12.71 C 14.87 -6.79 41 6.86 30.78 20.71 C 28.12 24.34 25.32 26.92 25.34 28.89 C 25.39 32 34.25 34.08 30.75 45 C 25.89 60.15 6.91 55 3 40.64"
-        android:strokeColor="#231F20"
-        android:strokeWidth="6"
+        android:pathData="M 6 13.71 C 15.87 -5.79 42 7.86 31.78 21.71 C 29.12 25.34 26.32 27.92 26.34 29.89 C 26.39 33 35.25 35.08 31.75 46 C 26.89 61.15 7.91 56 4 41.64"
+        android:strokeColor="#231f20"
+        android:strokeWidth="8"
         android:strokeLineCap="round"
         android:strokeMiterLimit="10"/>
   </group>
 </vector>
-
 
 
     <!--<vector xmlns:android="http://schemas.android.com/apk/res/android"
