--- a/app/src/main/res/drawable/ic_4.xml
+++ b/app/src/main/res/drawable/ic_4.xml
@@ -1,16 +1,16 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
-    android:width="32dp"
-    android:height="56dp"
-    android:viewportWidth="32"
-    android:viewportHeight="56">
+    android:width="34dp"
+    android:height="58dp"
+    android:viewportWidth="36"
+    android:viewportHeight="60">
   <group android:name="group">
     <path
         android:name="path"
-        android:pathData="M 24.84 38 C 19.51 38.286 14.167 38.259 8.84 37.92 C 4.72 37.58 2.09 35.5 3.3 31.92 C 5.23 26.1 17.72 9.07 21.81 4.4 C 24.38 1.48 28.67 3.52 29.26 6.93 C 29.55 8.56 29.62 51.35 29.38 53.71"
-        android:strokeColor="#231F20"
-        android:strokeWidth="6"
+        android:pathData="M 25.84 39 C 20.51 39.286 15.167 39.259 9.84 38.92 C 5.72 38.58 3.09 36.5 4.3 32.92 C 6.23 27.1 18.72 10.07 22.81 5.4 C 25.38 2.48 29.67 4.52 30.26 7.93 C 30.55 9.56 30.62 52.35 30.38 54.71"
+        android:strokeColor="#231f20"
+        android:strokeWidth="8"
         android:strokeLineCap="round"
         android:strokeMiterLimit="10"/>
   </group>
