--- a/app/src/main/res/drawable/ic_5.xml
+++ b/app/src/main/res/drawable/ic_5.xml
@@ -1,16 +1,16 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
-    android:width="34dp"
-    android:height="57dp"
-    android:viewportWidth="34"
-    android:viewportHeight="57">
+    android:width="36dp"
+    android:height="59dp"
+    android:viewportWidth="36"
+    android:viewportHeight="61">
   <group android:name="group">
     <path
         android:name="path"
-        android:pathData="M 3 49.13 C 5.59 51.84 9.55 54.65 14.32 54.39 C 20.5 54.05 23.77 51.52 26.43 46.81 C 27.905 44.062 28.24 40.842 27.363 37.849 C 26.486 34.856 24.465 32.326 21.74 30.81 C 18.51 28.87 9.74 26.62 5.97 22.44 C 2 18.05 2.56 6.56 6.15 4.72 C 10.06 2.72 14.05 5.16 16.53 6 C 23 8.18 26.74 8 31 3"
-        android:strokeColor="#231F20"
-        android:strokeWidth="5"
+        android:pathData="M 4 50.13 C 6.59 52.84 10.55 55.65 15.32 55.39 C 21.5 55.05 24.77 52.52 27.43 47.81 C 28.905 45.062 29.24 41.842 28.363 38.849 C 27.486 35.856 25.465 33.326 22.74 31.81 C 19.51 29.87 10.74 27.62 6.97 23.44 C 3 19.05 3.56 7.56 7.15 5.72 C 11.06 3.72 15.05 6.16 17.53 7 C 24 9.18 27.74 9 32 4"
+        android:strokeColor="#231f20"
+        android:strokeWidth="8"
         android:strokeLineCap="round"
         android:strokeMiterLimit="10"/>
   </group>
