--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,7 +3,7 @@
 
     <PreferenceCategory app:title="@string/game">
         <ListPreference
-            app:defaultValue="1"
+            app:defaultValue="@string/default_game_value"
             app:entries="@array/preferencesGameTitles"
             app:entryValues="@array/preferencesGameTitles"
             app:key="@string/game_key"
