--- a/app/src/main/res/layout/item_toss.xml
+++ b/app/src/main/res/layout/item_toss.xml
@@ -27,7 +27,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_2" />
+            tools:src="@drawable/ic_wire_2" />
 
         <ImageView
             android:id="@+id/ring_image_view"
