--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            style="@style/DtcToolbarStyle" />
 
         <!-- контейнер для всех фрагментов   -->
         <androidx.fragment.app.FragmentContainerView
