--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#FF0F8A44</color>
-    <color name="red">#FFE81D25</color>
-    <color name="sisal">#FFC5BAA0</color>
+
+    <color name="darts_black">#FF241F21</color>
+    <color name="darts_steel">#FFD9DEDE</color>
+    <color name="darts_green_dark">#FF035B41</color>
+    <color name="darts_green">#FF0F8A44</color>
+    <color name="darts_red">#FFE81D25</color>
+    <color name="darts_sisal">#FFC5BAA0</color>
 
     <color name="darts_white">#FFFFEE</color>"
 
+    <!--    TODO delete-->
     <drawable name="not_counted_bg">#80000000</drawable>
 </resources>
