--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,52 @@
 <resources>
 
     <!-- style for ImageButtons in fragment_toss.xml-->
+    <style name="toss_imagebutton_first_column_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
     <style name="toss_imagebutton_style">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_margin">1dp</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
         <item name="android:scaleType">fitCenter</item>
     </style>
+
+    <!--  <editor-fold desc="Toolbar style (connected directly to the toolbar in xml)">  -->
+    <style name="DtcToolbarStyle">
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:theme">@style/DtcToolbarTheme</item>
+        <item name="titleTextAppearance">@style/CustomTitleTextAppearance</item>
+        <item name="subtitleTextAppearance">@style/CustomSubTitleTextAppearance</item>
+    </style>
+
+    <style name="DtcToolbarTheme">
+        <!-- Color used for the title of the Toolbar - as long as not overridden -->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!-- Used to color back button and three dots -->
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
+    <style name="CustomTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+<!--        <item name="android:fontFamily">@string/ff_roboto_condensed</item>-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--        <item name="android:textColor">@color/amber_500_primary</item>-->
+<!--        <item name="android:textStyle">bold</item>-->
+    </style>
+
+    <style name="CustomSubTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+<!--        <item name="android:fontFamily">@string/ff_roboto_condensed</item>-->
+<!--        <item name="android:textSize">14sp</item>-->
+<!--        <item name="android:textColor">@color/pink_500_primary</item>-->
+<!--        <item name="android:textStyle">italic</item>-->
+    </style>
+    <!--  </editor-fold>  -->
 
 </resources>
