--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!--  change font color for PreferenceCategory in settings  -->
+        <item name="colorAccent">@color/darts_green_dark</item>
     </style>
 
 </resources>
